# elf-bindings

./: README.md  Setup.hs  config.h.in  configure.ac  elf-bindings.cabal
buildtools/: Constants.hsc  ConstantsTemplate.hsc  ElfHeaderTemplate.hsc  GenHsc.hs  regenerate_constants.sh
src/Elf/: Types.hs
